@@ -7,28 +7,33 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
+
 //добавляем для спринга потому что опшен ломает корс
 @Configuration
 public class CorsConfig {
 
-    @Value("${cors.allowed.origins}")
-    private String frontend;
+    @Value("${cors.allowed.origins:http://localhost:5173}")
+    private String allowedOrigins;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
+        // Разбиваем строку на массив (если несколько origins через запятую)
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
 
-        config.setAllowedOrigins(List.of(frontend));
-        config.setAllowedMethods(List.of(
+        config.setAllowedOrigins(origins);
+        config.setAllowedMethods(Arrays.asList(
                 "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
         ));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
-
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
+        config.setMaxAge(3600L);
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
+
+        System.out.println("✅ CORS настроен для: " + allowedOrigins);
 
         return source;
     }
